[gd_scene load_steps=11 format=3 uid="uid://c7xbusdsm4w70"]

[ext_resource type="Script" path="res://Scenes/Enemy/enemy.gd" id="1_e0sxd"]
[ext_resource type="PackedScene" uid="uid://bk6unpkxlxmvu" path="res://Assets/BlenderObjs/Minotaur.tscn" id="2_nsy2e"]
[ext_resource type="Script" path="res://Scripts/StateMachine/enemy_state_machine.gd" id="5_dmhko"]
[ext_resource type="Script" path="res://Scripts/EnemyStateScripts/AttackEnemyState.gd" id="5_lomdf"]
[ext_resource type="Script" path="res://Scripts/EnemyStateScripts/WalkingEnemyState.gd" id="6_b4c5l"]
[ext_resource type="Script" path="res://Scripts/EnemyStateScripts/IdleEnemyState.gd" id="8_2t2xe"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_06o1b"]
radius = 0.457992

[sub_resource type="BoxShape3D" id="BoxShape3D_3d1rm"]
size = Vector3(1, 2.44153, 7.51114)

[sub_resource type="SphereShape3D" id="SphereShape3D_sk6bu"]
radius = 2.0

[sub_resource type="SphereShape3D" id="SphereShape3D_re50c"]
radius = 1.99

[node name="Enemy" type="CharacterBody3D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 35
script = ExtResource("1_e0sxd")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1.46758, 0, 0, 0, 1.51504, 0, 0, 0, 1.61496, 0, 1.5, 0.2)
shape = SubResource("CapsuleShape3D_06o1b")

[node name="ENEMY" parent="CollisionShape3D2" instance=ExtResource("2_nsy2e")]
transform = Transform3D(0.998821, 0, 0, 0, 0.998821, 0, 0, 0, 0.998821, 0, -1.01, 0)

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="EnemyStateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("5_dmhko")
CURRENT_STATE = NodePath("WalkingEnemyState")

[node name="AttackEnemyState" type="Node" parent="EnemyStateMachine"]
script = ExtResource("5_lomdf")

[node name="WalkingEnemyState" type="Node" parent="EnemyStateMachine"]
script = ExtResource("6_b4c5l")

[node name="IdleEnemyState" type="Node" parent="EnemyStateMachine"]
script = ExtResource("8_2t2xe")

[node name="DamageHitbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
collision_layer = 64
collision_mask = 32

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0355835, -1.05678)
shape = SubResource("BoxShape3D_3d1rm")

[node name="WalkingHitbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="WalkingHitbox"]
shape = SubResource("SphereShape3D_sk6bu")

[node name="PlayerBlockingHitbox" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 16
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerBlockingHitbox"]
shape = SubResource("SphereShape3D_re50c")

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="IndicatorTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[connection signal="area_entered" from="DamageHitbox" to="." method="_on_damage_hitbox_area_entered"]
[connection signal="body_entered" from="WalkingHitbox" to="." method="_on_walking_hitbox_body_entered"]
[connection signal="body_exited" from="WalkingHitbox" to="." method="_on_walking_hitbox_body_exited"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="IndicatorTimer" to="EnemyStateMachine/AttackEnemyState" method="_on_indicator_timer_timeout"]
